--- a/style/style.css
+++ b/style/style.css
@@ -20,7 +20,7 @@ body {
 
 .callout-container {
     height: 90vh;
-    background: url(assets/images/monkees.jpg) no-repeat center center fixed;
+    background: url(/assets/images/monkees.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
